# distributed-l2r

./: Makefile  README.md  pyproject.toml
distrib-l2r/: api.py  utils.py
distrib-l2r/async/: learner.py
distrib_l2r/: api.py
distrib_l2r/async/: learner.py
distrib_l2r/asynchron/: learner.py  worker.py
test/: test_utils.py
test/asychron/: test_learner.py
